# kanak

./: README.md
backend/: Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
kanak_flutter/: README.md  pubspec.yaml
kanak_flutter/android/app/: build.gradle
kanak_flutter/android/app/src/debug/: AndroidManifest.xml
kanak_flutter/android/app/src/main/: AndroidManifest.xml
kanak_flutter/android/app/src/main/kotlin/com/example/kanak_flutter/: MainActivity.kt
kanak_flutter/ios/Runner/: Info.plist
kanak_flutter/ios/Runner.xcodeproj/: project.pbxproj
kanak_flutter/lib/: answer.dart  main.dart  question.dart  quiz.dart  result.dart
kanak_flutter/lib/data_types/: currency_value.dart
kanak_flutter/lib/models/: account.dart  asset.dart  temporary_asset.dart  transaction.dart
kanak_flutter/test/: widget_test.dart
kanak_flutter/web/: index.html  manifest.json
market/: .env  .env.sample  .gitignore  Cargo.toml
market/migrations/2021-11-16-000115_create_stock_assets/: down.sql  up.sql
market/migrations/2022-01-23-233358_create_stock_prices/: down.sql  up.sql
market/src/: lib.rs  main.rs  schema.rs
market/src/models/: mod.rs  stock_assets.rs  stock_price.rs  stock_prices.rs
market/src/utils/: alpha_vantage.rs  mod.rs  response_dto.rs
web-app/: .env  .gitignore  .prettierrc  package-lock.json  package.json  svelte.config.cjs
web-app/src/lib/: Footer.svelte  Nav.svelte  foo.ts
web-app/src/lib/common/: Head.svelte
web-app/src/pages/: about.js  index.js
web-app/src/routes/: $layout.svelte  index.svelte
web-app/src/routes/about/: index.svelte  temp_buttons.svelte
web-app/static/: humans.txt
