[package]
name = "market"
version = "0.1.0"
edition = "2021"

[[bin]]
name="price-updater"
path="src/bin/price-updater/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
futures = "0.3"
async-std = "1.10.0"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
